bug squashing re: messaging system

--- a/client/stylesheetsx/style.css
+++ b/client/stylesheetsx/style.css
@@ -520,7 +520,6 @@ a.matched-user:visited {
 #messaging-wrapper {
 	height:90%;
 	width:100%;
-	padding-left:0px;
 }
 
 #messaging {
